src/App.css
.header {
  background-color: black;
  padding: 1em;
  color: white;
}

.header .logo {
  width: 260px;
}

.sidebar {
  background-color: #f4f4f5;
  overflow:scroll;
}

a.highlighted {
  background-color: rgba(230,235,255,0.5);
  font-weight: bold;
}

div.NavDBTree {
  background-color: rgba(255,255,255,0.25);
}

div.NavDBTree.highlighted {
  background-color: rgba(230,235,255,0.25);
}

.NavTree dt {
  margin-left:1em;
}
.NavTree dd {
  margin-left:2em;
}
.NavTree dl {
  margin:0;
}

.FaunaRepl {
  background-color: #f4f4f5;
  border-top: 4px solid #f4f4f5;
  position: relative;
  height:100%; width: 100%;
}
.QueryResult {
  height:100%; width: 100%;
}
.repl-workspace {
  height:100%; width: 100%;
}
.repl-bar {
  border-top: 1px solid #ddd;
  background-color: #f4f4f5;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 42px;
  overflow: hidden;
}
.repl-bar .buttons {
  float:right;
}
.repl-bar .ms-Breadcrumb {
  margin : 0.25em;
}
.expandedArea pre {
  margin:0;
}
.expandedArea {
  height: calc(100% - 46px);
  position: relative;
}
.Resizer {
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    background: #000;
    opacity: .2;
    z-index: 1;
    -moz-background-clip: padding;
    -webkit-background-clip: padding;
    background-clip: padding-box;
}

.Resizer:hover {
    -webkit-transition: all 2s ease;
    transition: all 2s ease;
}

.Resizer.horizontal {
    height: 11px;
    margin: -5px 0;
    border-top: 5px solid rgba(255, 255, 255, 0);
    border-bottom: 5px solid rgba(255, 255, 255, 0);
    cursor: row-resize;
    width: 100%;
}

.Resizer.horizontal:hover {
    border-top: 5px solid rgba(0, 0, 0, 0.5);
    border-bottom: 5px solid rgba(0, 0, 0, 0.5);
}

.Resizer.vertical {
    width: 11px;
    margin: 0 -5px;
    border-left: 5px solid rgba(255, 255, 255, 0);
    border-right: 5px solid rgba(255, 255, 255, 0);
    cursor: col-resize;
}

.Resizer.vertical:hover {
    border-left: 5px solid rgba(0, 0, 0, 0.5);
    border-right: 5px solid rgba(0, 0, 0, 0.5);
}

